Fixed terms, cookies polices on mobile devices

--- a/src/scss/ov.scss
+++ b/src/scss/ov.scss
@@ -557,6 +557,17 @@ header {
         background-color: #fff;
         margin-top: 100px;
     }
+    @media (max-width: 992px) {
+        .wrapper {
+            padding-left: 30px;
+            padding-right: 30px;
+            margin-bottom: 20px;
+
+            h1 {
+                margin-top: 20px; 
+            }
+        }
+    }
 }
 
 #message {
